--- a/src/app/project/project.page.scss
+++ b/src/app/project/project.page.scss
@@ -10,3 +10,10 @@
 .cursor{
   cursor: pointer;
 }
+.headerTitle .logo {
+    max-width: 100px;
+    width:auto;
+    max-height: 56px;
+    display: inline-block;
+    vertical-align: middle;
+}
