--- a/src/app/landing-page/landing-page.page.scss
+++ b/src/app/landing-page/landing-page.page.scss
@@ -124,14 +124,23 @@ span:after {
 	position:relative;	
 	top:-10px;
 }
+.subContent{
+	@media(max-width: 768px) {
+		margin:2px!important;
+		padding:2px!important;
+	}
+}
 .subContentCard{
 	.card-content-md{
 		padding:0px!important;
 	}
+
 	position:relative;
 	top:-80px;
 	@media(max-width: 768px) {
 		top:-20px;
+		--margin:2px!important;
+		--padding:2px!important;
 	}
 	p{
 		font-size:1.3em;
@@ -143,42 +152,122 @@ span:after {
 	margin-top:30px;
 	margin-bottom:60px;
 	position: relative;
-	h2{
-		font-size: 2.5em;
-		position: absolute;
-		bottom: 218px;
-		width:100%;
-		color:var(--ion-color-primary-contrast);
-	}
-	@media(max-width: 800px) {
-		h2{
-			font-size: 1.5em;
+	ion-col{
+		margin-left:30px;
+		margin-right:30px;
+		@media(max-width: 800px) {
+			margin-left:0px;
+			margin-right:0px;
 		}
 	}
-	.subContentImg{
+	.actionButton{
+		font-size: 2em;
+		height: 50px;
+		color:var(--ion-color-primary-contrast);
+		--border-color:var(--ion-color-primary-contrast);
+		position: absolute;
+		top: 40%;
+		left: 50%;
+		-webkit-transform: translate(-50%, -50%);
+		-ms-transform: translate(-50%, -50%);
+		transform: translate(-50%, -50%);
+		--background:rgba(0, 0, 0, 0.3);
+		@media(max-width: 800px) {
+				top: 27%;
+		}
+
+	}
+	@media(max-width: 1600px) {
+		.actionButton{
+			font-size: 1.7em;
+			height: 40px;
+		}
+	}
+	@media(max-width: 1400px) {
+		.actionButton{
+			font-size: 1.3em;
+			height: 40px;
+		}
+	}
+	@media(max-width: 800px) {
+		.actionButton{
+			font-size: 1.2em;
+			height: 36px;
+		}
+	}
+
+	.parent{
+		cursor:pointer;
 		min-width:250px;
 		min-height: 250px;
+		height: 300px;
+		overflow: hidden;
 		width: auto;
 		display: block;
 		margin-left: auto;
 		margin-right: auto;
-		background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ), url(https://image.freepik.com/free-photo/garage-doors_23-2148098575.jpg);
-		background-repeat: no-repeat;
+		@media(max-width: 800px) {
+			min-height: 100px;
+			width: 100%;
+			height: 100px;
+
+		}
+	}
+	.child{
+		height: 100%;
+		width: 100%;
 		background-size: cover;
+		background-repeat: no-repeat;
+		-webkit-transition: all .5s;
+		-moz-transition: all .5s;
+		-o-transition: all .5s;
+		transition: all .5s;
+	}
+	.parent:hover .child, .parent:focus .child {
+		-ms-transform: scale(1.05);
+		-moz-transform: scale(1.05);
+		-webkit-transform: scale(1.05);
+		-o-transform: scale(1.05);
+		transform: scale(1.05);
+	}
+	.parent:hover .child:before, .parent:focus .child:before {
+		display: block;
+	}
+
+	.parent:hover a, .parent:focus a {
+		display: block;
+	}
+
+	.child:before {
+		content: "";
+		display: none;
+		height: 100%;
+		width: 100%;
+		position: absolute;
+		top: 0;
+		left: 0;
+		background-color: rgba(0, 0, 0, 0.4);
+	}
+	.sub1{
+		background-image: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ), url(https://image.freepik.com/free-photo/garage-doors_23-2148098575.jpg);
 
 	}
 	.sub2{
-		background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ),  url(https://image.freepik.com/free-photo/top-view-different-types-tools_23-2148428327.jpg);
-		background-repeat: no-repeat;
-		background-size: cover;
+		background-image: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ),  url(https://image.freepik.com/free-photo/top-view-different-types-tools_23-2148428327.jpg);
 	}
 	.sub3{	
-		background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ), url(https://image.freepik.com/free-photo/colleagues-giving-fist-bump_53876-64857.jpg);
-		background-repeat: no-repeat;
-		background-size: cover;
+		background-image: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ), url(https://image.freepik.com/free-photo/colleagues-giving-fist-bump_53876-64857.jpg);
 	}
+	a {
+		color:var(--ion-color-step-550, #737373);
+		text-decoration: none !important;
+
+	}
+
+	
 	
 }
+
 .bigMargin{
 	margin-bottom:100px;
 }
@@ -201,37 +290,3 @@ span:after {
 
 
 
-
-.overlay {
-  position: absolute;
-  bottom: 100%;
-  left: 0;
-  right: 0;
-  background-color:var(--ion-color-primary);
-  overflow: hidden;
-  width: 100%;
-  height:0;
-  transition: .5s ease;
-  cursor:pointer;
-  .button{
-  	--border-color: var(--ion-color-primary-contrast);
-    color: var(--ion-color-primary-contrast);
-  }
-}
-
-.subContentImg:hover .overlay {
-  bottom: 0;
-  height: 100%;
-}
-
-.text {
-  color: white;
-  font-size: 20px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
