--- a/src/app/on-boarding/on-boarding.page.html
+++ b/src/app/on-boarding/on-boarding.page.html
@@ -1,6 +1,7 @@
 
 <ion-content class="ion-padding">
-	<ion-item lines="none" *ngIf="stepPage===1">
+
+	<ion-item lines="none" *ngIf="stepPage !==0">
 		<ion-icon color="primary" slot="end" name="close-outline" class="pointer" (click)="dismiss()"></ion-icon>
 	</ion-item>
 	<ion-slides  #slides pager="true" [options]="slideOpts" class="onboardingSlides">
@@ -43,20 +44,16 @@
 					<ion-label color="primary" position="floating">{{'ONBOARDINGPAGE.ProjectName' | translate}}</ion-label>
 					<ion-input type="text"  [(ngModel)] ="project.summary.name" ></ion-input>
 				</ion-item>
-				<ion-item lines="none">
-					<ion-label color="primary" position="stacked">{{'ONBOARDINGPAGE.ProjectDomains' | translate}}</ion-label>
-				</ion-item>
-				<ion-item>
-					<ion-auto-complete [(model)]="project.domains"
-					[multi]="true"
-					[dataProvider]="providerDomains"
-					[exclude]="otherDomain"
-					[options]="domainOptions"
-					[removeButtonIcon]="'assets/icons/clear.svg'"
-					[removeButtonColor]="'dark'"
-					[useIonInput]="true"
-					></ion-auto-complete>
-				</ion-item>
+		
+				<ion-list class="listDomain">
+					<ion-item-divider sticky class="divider">
+						<ion-label color="primary">{{'ONBOARDINGPAGE.ProjectDomains' | translate}}</ion-label>
+					</ion-item-divider>
+					<ion-item *ngFor="let domainItem of domainItems">
+						<ion-label>{{domainItem.text}}</ion-label>
+						<ion-checkbox slot="end" (ionChange)="domainChecked($event, domainItem)"></ion-checkbox>
+					</ion-item>
+				</ion-list>
 				<ion-item>
 					<ion-label color="primary" position="floating">{{'ONBOARDINGPAGE.ProjectMaturity' | translate}}</ion-label>
 					<ion-select  multiple="true" [interfaceOptions]="customPopoverOptions"  [(ngModel)] ="project.maturity" >
@@ -70,8 +67,8 @@
 				</div>
 			</div>
 		</ion-slide>
-		<ion-slide>
-			<div  class="ion-margin-top ion-margin-bottom fullWidth">
+		<ion-slide >
+			<div  class="ion-margin-top ion-margin-bottom fullWidth" *ngIf="step ===2">
 				<div class="ion-text-center ">
 					<img src="./assets/images/undraw_good_team_m7uu.svg" class="welcomePicture"></div>
 					<h2 class="ion-text-uppercase">{{'ONBOARDINGPAGE.SubTitleStep2' | translate}}</h2>
@@ -108,9 +105,7 @@
 										</ion-item>
 
 										<ion-input type="email" class="input" placeholder="email" [(ngModel)]="teamMember.email" ></ion-input>
-										<ion-select  interface="action-sheet"  placeholder="Role" [(ngModel)] ="teamMember.role" >
-											<ion-select-option *ngFor="let item of roleItems" [value]="item.index">{{item.text}}</ion-select-option>
-										</ion-select>
+										
 									</ion-card-content>
 								</ion-card>
 							</ion-col>
@@ -120,14 +115,6 @@
 						<ion-button color="primary" fill="outline" class="ion-text-left"(click)="requestAddTeamMember()">{{'ONBOARDINGPAGE.AddTeamMember' | translate}}</ion-button>
 
 					</div>
-
-
-					<ion-item>
-						<ion-label color="primary" position="floating">{{'ONBOARDINGPAGE.FinancialResources' | translate}}</ion-label>
-						<ion-select  interface="popover" [(ngModel)] ="project.financialResources.initialFinancialResources" >
-							<ion-select-option *ngFor="let item of financialResourcesItems" [value]="item.index">{{item.text}}</ion-select-option>
-						</ion-select>
-					</ion-item>	
 					<div class="ion-margin-top ion-margin-bottom ion-text-center">
 						<ion-button color="primary" (click)="startNewProject()">{{'ONBOARDINGPAGE.StartNewProjectButton2' | translate}}</ion-button>
 					</div>
