--- a/src/app/project/executive/summary/business-canvas-element/business-canvas-element.component.html
+++ b/src/app/project/executive/summary/business-canvas-element/business-canvas-element.component.html
@@ -1,6 +1,6 @@
 <div class="cell cellClickable ion-padding ion-margin-bottom" [ngClass]="{'highCell': elementStyle==='highCell', 'smallerCell': elementStyle==='smallerCell'}" *ngIf="elementData" >
 	<ion-icon name="checkmark-outline"  *ngIf="elementData.length !==0" class="stepDone ion-float-right"></ion-icon>
-	<h1>{{title }} <ion-icon  name="information-circle-outline" (click)="openDescriptivePopover()" ></ion-icon></h1> 
+	<h1>{{title }} </h1> 
 	<div >
 		<div *ngFor="let item of elementData"  > 
 			<ion-badge color="primary" tooltip="Tooltip" *ngIf="item.id  !== editedItemId" class="item ion-text-wrap" (click)="edit(item.id)">{{item.text}}
