--- a/src/app/tools/tools.page.scss
+++ b/src/app/tools/tools.page.scss
@@ -7,18 +7,16 @@
 	background-size: cover;
 	overflow: hidden;
 	background-position: center;
-    background-repeat: no-repeat;
-}
-@media(max-width: 400px) {
-	.logoWrapper{
-		height:50px;
+	background-repeat: no-repeat;
+	@media(max-width: 800px) {
+		max-height:100px;
+	}	
+	@media(max-width: 400px) {
+		max-height:45px;
 	}
 }
-@media(max-width: 800px) {
-	.logoWrapper{
-		height:100px;
-	}
-}
+
+
 .priceIcon{
 	font-size: 24px;
 	position: relative;
@@ -28,6 +26,9 @@
 .description{
 	height: 150px;
 	text-overflow: ellipsis;
+	@media(max-width: 400px) {
+		height:100px;
+	}
 }
 .labels{
 	display: flex;
@@ -51,20 +52,56 @@
 }
 .gridTools{
 	max-width:1500px;
-	@media(max-width: 400px) {
-		.toolCol{
-			min-width:100%;
-		}
-	}
-	@media(max-width: 800px) {
-		.toolCol{
-			min-width:40%;
-		}
+	margin-left: auto;
+	margin-right: auto;
+	.toolCol{
+		min-width:350px;
+		max-width: 400px;
 	}
 	@media(max-width:1200px) {
+		max-width:1060px;
+
+		
+	}
+	@media(max-width: 800px) {
+	}
+	@media(max-width: 400px) {
 		.toolCol{
-			min-width:350px;
+			--width:100%;
+		}
+		ion-card{
+			margin: 2px;
+		}
+		ion-card-content{
+			padding: 0px;
 		}
 	}
+
 	
+}
+.filter{
+	ion-col{
+		min-width:350px;
+		padding:0px;
+	}
+}
+.specialInput{
+	position: relative;
+	left: -5px;
+	top:-6px;
+	ion-input{
+		--padding:7px!important;
+		height:38px
+	}
+}
+.ng-select{
+	margin-top: 0px;
+}
+.productNameInput{
+	border-radius: 4px;
+	border: 1px solid;
+	border-color: #b3b3b3 #ccc #d9d9d9;
+	--padding-start:12px!important;
+	
+
 }
